@@ -803,6 +803,7 @@
  - API: The new CControlPerspectiveBlop allows clients to read and write entire layout files without the need of creating any CDockables
  ! API: Removed the mapping between factories and MultipleCDockables that was stored in CSetting, but that was not accessed anywhere
  - Bugfix: CombinedStackDockContentPane.getMinimumSize returned a value about twice as big as necessary 
+ - Bugfix: calling "DefaultDockRelocatorEvent.forbid" on a "search", did not result in the search continuing with another station
     
 [Todo]
 - Drop StackDockStation over Dockable and merge them
